# pySimplefin

./: .gitignore  LICENSE  README.md  example.env  example.py  main.py  pyproject.toml
.github/workflows/: python-package.yml
src/: setup.py
src/pysimplefin/: __init__.py  _session.py  database.py  models.py  sql.py
src/simplefin/: __init__.py  _session.py  models.py
tests/: test_database.py  test_models.py  test_session.py  test_setup.py  test_sql.py
