[project]
name = "pysimplefin"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "niquests>=3.15.2",
    "pydantic>=2.11.9",
    "pysimplefin @ file://${PWD}",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
