[project]
name = "pysimplefin"
version = "0.1.1"
description = "A python library for accessing simplefin servers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "niquests>=3.15.2",
    "pydantic>=2.11.9",
    "sqlmodel>=0.0.25",
]

[project.urls]
Homepage = "https://github.com/seesteins/pysimplefin"
Repository = "https://github.com/seesteins/pysimplefin"
Issues = "https://github.com/seesteins/pysimplefin/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pysimplefin"]
